[package]
name = "omx_interfaces"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
export-abi = ["stylus-sdk/export-abi"]

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
stylus-sdk = { workspace = true }
wee_alloc = { workspace = true }
syn-solidity = { workspace = true }
ruint = { workspace = true }
omx_common = { workspace = true }
