[package]
name = "omx_deploy"
version = "0.0.1"
authors = ["omxlabs"]
license = "GPL-3.0-or-later"
edition = "2021"
homepage = "https://github.com/chadury2021/omx_wasm"
repository = "https://github.com/chadury2021/omx_wasm"
keywords = ["utils", "optimization", "omx"]

[dependencies]
ethers = "2.0.10"
ethers-providers = "2.0.10"
ethers-contract = "2.0.10"
tokio = { version = "1.12.0", features = ["full"] }
hex-literal = "0.4.1"
async-trait = "0.1.73"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
paste = "1.0.6"
hex = "0.4.3"

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[workspace]
