[package]
name = "omx_tests"
version = "0.1.0"
authors = ["omxlabs"]
license = "GPL-3.0-or-later"
edition = "2021"
homepage = "https://github.com/chadury2021/omx_wasm"
repository = "https://github.com/chadury2021/omx_wasm"
keywords = ["utils", "optimization", "omx"]

[dependencies]
ethers = "2.0.10"
ethers-providers = "2.0.10"
ethers-contract = "2.0.10"
tokio = { version = "1.12.0", features = ["full"] }
hex-literal = "0.4.1"
async-trait = "0.1.73"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
rand = "0.8.5"
envconfig = "0.10.0"
dotenvy = "0.15.7"
hex = "0.4.3"
stylus-sdk = { version = "0.4.1", features = ["debug"] }
auto_impl = "1.1.0"
thiserror = "1.0.50"
rlp = "0.5.2"
log = "0.4.20"
simple_logger = "4.2.0"
paste = "1.0.6"

wasmer = { path = "./wasmer/lib/api/" }


[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[workspace]
